# 21e8miner-wasm

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  miner.rs  prompt.rs  utils.rs
src/config/: cli.rs  mod.rs  prompt.rs
src/miner/: mod.rs
tests/: config.rs  miner.rs
