[package]
name = "magic-miner"
version = "0.1.0"
edition = "2021"
description = "21e8miner implemented in Rust"
repository = "https://github.com/blocksurf/21e8miner-wasm"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#wasm-bindgen = "0.2.87"
rayon = "1.7.0"
bsv = { git = "https://github.com/blocksurf/bsv-wasm", branch = "master" }
#wasm-bindgen-rayon = {version = "1.0.3", features = ["atomics", "bulk-memory"]}
colored = "2.0.0"
hex = "0.4.3"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
config = "0.13.3"
directories = "5.0.1"
toml = "0.7.4"
