[package]
name = "magic-miner"
version = "0.1.0"
edition = "2021"
description = "21e8miner implemented in Rust"
repository = "https://github.com/blocksurf/21e8miner-wasm"
license = "MIT"
publish = false

[lib]
name = "magic_miner"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "start"
path = "src/bin/miner/bin.rs"

[[bin]]
name = "setup"
path = "src/bin/setup/bin.rs"

[dependencies]
bsv = { git = "https://github.com/blocksurf/bsv-wasm", rev = "5f8f8e9d241a985aa2c7ae15019974e83a22b7e3" }
hex = "0.4.3"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
config = "0.13.3"
toml = "0.8.8"
anyhow = "1.0.75"
asky = "0.1.1"

#wasm-bindgen-rayon = {version = "1.0.3", features = ["atomics", "bulk-memory"]}
#wasm-bindgen = "0.2.87"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
